--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
-    "multer": "^1.4.5-lts.1",
-    "winston": "^3.13.0"
+    "multer": "^1.4.5-lts.1"
   }
 }
